--- a/Samitex/app/src/main/AndroidManifest.xml
+++ b/Samitex/app/src/main/AndroidManifest.xml
@@ -25,8 +25,10 @@
         <activity
             android:name=".ScanDataActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".KonfirmasiActivity"
-            android:screenOrientation="portrait" ></activity>
+        <activity
+            android:name=".KonfirmasiActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".CountListActivity"></activity>
     </application>
 
 </manifest>
