--- a/Samitex/app/src/main/AndroidManifest.xml
+++ b/Samitex/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kreasikode.samitex">
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -28,7 +29,8 @@
         <activity
             android:name=".KonfirmasiActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".CountListActivity"></activity>
+        <activity android:name=".CountListActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
