--- a/Samitex/app/src/main/AndroidManifest.xml
+++ b/Samitex/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kreasikode.samitex">
-    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -28,8 +29,10 @@
         <activity
             android:name=".KonfirmasiActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".CountListActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".CountListActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".CountListMesinActivity"></activity>
     </application>
 
 </manifest>
